appId: com.fettqa.events.android
name: Bad password shows error
---
- launchApp:
    clearState: true
- tapOn:
    id: headerLoginButton
- tapOn:
    id: emailInput
- inputText: "admin@example.com"
- tapOn:
    id: passwordInput
- inputText: "wrong-password"
- tapOn:
    id: loginButton
- assertVisible:
    id: errorText
- assertVisible: "bad credentials"
